[project]
name = "NomNom"
version = "1.0.0"
description = "A Hugo Awards ballot and nomination management system."
authors = [
    {name = "Chris Rose", email = "offline@offby1.net"},
]
dependencies = [
    "django~=5.0.1",
    "django-oauth-toolkit>=2.3.0",
    "django-cors-headers>=4.3.1",
    "psycopg2-binary>=2.9.9",
    "jinja2>=3.1.2",
    "django-seed>=0.3.1",
    "environ-config>=23.2.0",
    "social-auth-app-django>=5.4.0",
    "django-extensions>=3.2.3",
    "django-fsm==2.8.1",
    "django-markdownify>=0.9.3",
    "icecream>=2.1.3",
    "django-ipware>=6.0.3",
    "celery>=5.3.6",
    "flower>=2.0.1",
    "django-celery-results>=2.5.1",
    "redis>=5.0.1",
    "django-browser-reload>=1.12.1",
    # Upgrading to 24 causes an inexplicable background color change in
    # bg-body-tertiary
    "django-bootstrap5>=23.3,<24",
    "fontawesomefree>=6.5.1",
    "gunicorn[eventlet]>=21.2.0",
    "eventlet>=0.33.3",
    "whitenoise>=6.6.0",
    "django-celery-beat>=2.5.0",
    "django-watchman>=1.3.0",
    "sentry-sdk[celery,django]>=1.39.1",
    "boto3>=1.34.17",
    "django-admin-autocomplete-filter>=0.7.1",
    "django-render-block>=0.9.2",
    "django-htmx>=1.17.2",
    "django-logentry-admin>=1.1.0",
    "bs4>=0.0.2",
    "django-click>=2.3.0",
    "pyrankvote>=2.0.6",
    "svcs>=24.1.0",
    "botocore-stubs>=1.34.94",
    "boto3-stubs[s3]>=1.34.105",
    "django-model-utils>=4.5.1",
    "django-markdownfield>=0.11.0",
    "tenacity>=8.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest-django>=4.7.0",
    "pytest~=8.0",
    "django-stubs>=4.2.7",
    "djlint>=1.34.0",
    "pytest-xdist~=3.5.0",
    "pytest-cov~=4.1.0",
    "django-debug-toolbar>=4.2.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.4.0",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
    "mkdocs-glightbox>=0.3.7",
    "mkdocs-material>=9.5.11",
    "mkdocs-macros-plugin>=1.0.5",
    "django-test-plus>=2.2.3",
    "pytest-lazy-fixtures>=1.0.5",
    "pytest-profiling>=1.7.0",
    "nplusone>=1.0.0",
    "pgcli>=4.1.0",
    # This is only needed here because django-test-plus doesn't
    # correctly model a dependency on setuptools for versions over 3.12
    "setuptools>=69.5.1;python_version>='3.12'",
    "wat-inspector>=0.3.2",
]

[tool.pdm.resolution.overrides]
django-celery-beat = ">=2.5.0"
django = ">= 5.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nomnom.test_settings"
looponfailroots = ["nomnom", "nominate", "django_svcs", "wsfs", "nomnom_dev"]

[tool.coverage.report]
exclude_also = [
    "\\.\\.\\."
]

[tool.djlint]
profile="django"

[tool.django-stubs]
django_settings_module = "nomnom.settings"

[tool.ruff.lint.isort]
known-first-party = ["nomnom", "advise", "nominate", "wsfs", "nomnom_dev", "glasgow2024"]
