[project]
name = "nomnom-hugoawards"
dynamic = ["version"]
description = "The NomNom Hugo Awards voting package"
authors = [
    {name = "Chris Rose", email = "offline@offby1.net"},
]
maintainers = [
  {name = "Chris Rose", email = "offline@offby1.net"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
    "boto3-stubs[s3]>=1.34.105",
    "boto3>=1.34.17",
    "botocore-stubs>=1.34.94",
    "bs4>=0.0.2",
    "celery>=5.3.6",
    "django-admin-autocomplete-filter>=0.7.1",
    "django-bootstrap5>=23.3,<24",
    "django-browser-reload>=1.12.1",
    "django-celery-beat>=2.5.0",
    "django-celery-results>=2.5.1",
    "django-click>=2.3.0",
    "django-cors-headers>=4.3.1",
    "django-extensions>=3.2.3",
    "django-fsm==2.8.1",
    "django-htmx>=1.17.2",
    "django-ipware>=6.0.3",
    "django-logentry-admin>=1.1.0",
    "django-markdownfield>=0.11.0",
    "django-markdownify>=0.9.3",
    "django-model-utils>=4.5.1",
    "django-oauth-toolkit>=2.3.0",
    "django-render-block>=0.9.2",
    "django-seed>=0.3.1",
    "django-svcs~=0.3.0",
    "django-watchman>=1.3.0",
    "django~=5.1.0",
    "environ-config>=23.2.0",
    "flower>=2.0.1",
    "fontawesomefree>=6.5.1",
    "icecream>=2.1.3",
    "jinja2>=3.1.2",
    "psycopg[binary]",
    "pyrankvote>=2.0.6",
    "redis>=5.0.1",
    "sentry-sdk[celery,django]>=1.39.1",
    "social-auth-core~=4.5",
    "svcs>=24.1.0",
    "whitenoise>=6.6.0",
    # Upgrading to 24 causes an inexplicable background color change in
    # bg-body-tertiary
]
requires-python = "~=3.12.0"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/nomnom/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nomnom"]

[tool.uv]
dev-dependencies = [
    "pytest-django>=4.7.0",
    "pytest~=8.0",
    "django-stubs>=4.2.7",
    "djlint>=1.34.0",
    "pytest-xdist~=3.5.0",
    "pytest-cov~=4.1.0",
    "pytest-sugar~=1.0.0",
    "django-debug-toolbar>=4.2.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.4.0",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
    "mkdocs-glightbox>=0.3.7",
    "mkdocs-material>=9.5.11",
    "mkdocs-macros-plugin>=1.0.5",
    "django-test-plus>=2.2.3",
    "pytest-lazy-fixtures>=1.0.5",
    # Broken on 3.12 and higher
    # "pytest-profiling>=1.7.0",
    "nplusone>=1.0.0",
    "pgcli>=4.1.0",
    # This is only needed here because django-test-plus doesn't
    # correctly model a dependency on setuptools for versions over 3.12
    "setuptools>=69.5.1;python_version>='3.12'",
    "social-auth-app-django~=5.0",
    "ruff>=0.6.7",
    "tenacity~=8.5.0",
    "wat-inspector>=0.4.0",
]

override-dependencies = [
    "django-celery-beat>=2.5.0",
    "django>= 5.0",
]

# [tool.uv.sources]
# django-svcs = { path = "../django-svcs/", editable = true }

[tool.pyright]
include = ["src"]
exclude = ["convention-template/**"]

# "none", "warning", "information", or "error"
reportMissingTypeArgument = "information"
reportPrivateUsage        = "information"
typeCheckingMode          = "standard"    # "off", "basic", "standard", "strict"

# Reports:
#   https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-diagnostics-settings
# place ignored rules here
reportAttributeAccessIssue = false # too many false positives with Django models

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nomnom.test_settings"
looponfailroots = ["src"]
django_find_project = false
filterwarnings = [
    # I know looponfailroots is 'deprecated' but ... i'm tired of seeing it
    "ignore::DeprecationWarning:xdist.plugin"
]
[tool.coverage.report]
exclude_also = [
    "\\.\\.\\."
]

[tool.djlint]
profile="django"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
exclude = [
    "src/nomnom/_version.py"
]

[tool.ruff.lint.isort]
known-first-party = ["nomnom"]

[tool.check-wheel-contents]
ignore = ["W004"]
