[project]
name = "nomnom-hugoawards"
dynamic = ["version"]
description = "The NomNom Hugo Awards voting package"
authors = [
    {name = "Chris Rose", email = "offline@offby1.net"},
]
maintainers = [
  {name = "Chris Rose", email = "offline@offby1.net"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
    "boto3-stubs[s3]~=1.34",
    "boto3~=1.34",
    "botocore-stubs~=1.34",
    "bs4~=0.0",
    "celery~=5.3",
    "django-admin-autocomplete-filter~=0.7",
    "django-bootstrap5~=23.3,<25",
    "django-browser-reload~=1.12",
    "django-celery-beat~=2.5",
    "django-celery-results~=2.5",
    "django-click~=2.3",
    "django-cors-headers~=4.3",
    "django-extensions~=3.2",
    "django-fsm~=2.8",
    "django-htmx~=1.17",
    "django-ipware~=7.0",
    "django-logentry-admin~=1.1",
    "django-markdownfield~=0.11",
    "django-markdownify~=0.9",
    "django-model-utils~=5.0",
    "django-oauth-toolkit~=3.0",
    "django-render-block~=0.9",
    "django-seed~=0.3",
    "django-svcs~=0.3",
    "django-watchman~=1.3",
    "django~=5.1",
    "environ-config~=24.1",
    "flower~=2.0",
    "fontawesomefree~=6.5",
    "jinja2~=3.1",
    "psycopg[binary]",
    "pyrankvote~=2.0",
    "redis~=5.0",
    "sentry-sdk[celery,django]~=2.19",
    "social-auth-core~=4.5",
    "svcs>=24.1,<26.0",
    "whitenoise~=6.6",
    # Upgrading to 24 causes an inexplicable background color change in
    # bg-body-tertiary
    "django-admin-action-forms>=1.3.0",
]
requires-python = ">=3.12.0,<3.14"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/nomnom/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nomnom"]

[tool.uv]
dev-dependencies = [
    "pytest-django~=4.7",
    "pytest~=8.0",
    "django-stubs~=4.2",
    "djlint~=1.34",
    "icecream~=2.1",
    "pytest-xdist~=3.5",
    "pytest-cov~=4.1",
    "pytest-sugar~=1.0",
    "django-debug-toolbar~=4.2",
    "factory-boy~=3.3",
    "freezegun~=1.5",
    "mkdocs~=1.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mkdocs-glightbox~=0.3",
    "mkdocs-material~=9.5",
    "mkdocs-macros-plugin~=1.0",
    "django-test-plus~=2.2",
    "pytest-lazy-fixtures~=1.0",
    # Broken on 3.12 and higher
    # "pytest-profiling~=1.7",
    "nplusone~=1.0",
    "pgcli~=4.1",
    # This is only needed here because django-test-plus doesn't
    # correctly model a dependency on setuptools for versions over 3.12
    "setuptools>=69.5.1;python_version>='3.12'",
    "social-auth-app-django~=5.0",
    "ruff~=0.6",
    "tenacity~=8.5",
    "wat-inspector~=0.4",
    "rich>=13.9.4",
    "faker~=35.0",
]

override-dependencies = [
    "django-celery-beat~=2.5",
    "django~= 5.1",
]

# [tool.uv.sources]
# django-svcs = { path = "../django-svcs/", editable = true }

[tool.pyright]
include = ["src"]
exclude = ["convention-template/**"]

# "none", "warning", "information", or "error"
reportMissingTypeArgument = "information"
reportPrivateUsage        = "information"
typeCheckingMode          = "standard"    # "off", "basic", "standard", "strict"

# Reports:
#   https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-diagnostics-settings
# place ignored rules here
reportAttributeAccessIssue = false # too many false positives with Django models

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nomnom.test_settings"
looponfailroots = ["src"]
django_find_project = false
filterwarnings = [
    # I know looponfailroots is 'deprecated' but ... i'm tired of seeing it
    "ignore::DeprecationWarning:xdist.plugin"
]
[tool.coverage.report]
exclude_also = [
    "\\.\\.\\."
]

[tool.djlint]
profile="django"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
exclude = [
    "src/nomnom/_version.py"
]

[tool.ruff.lint.per-file-ignores]
# we allow "undefined" code in tests so we can leave ic() calls in there
"**/tests/*" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["nomnom"]

[tool.check-wheel-contents]
ignore = ["W004"]
